--- a/follow_us.html
+++ b/follow_us.html
@@ -19,10 +19,10 @@
         </div>
         <div class="nav-list">
             <ul>
-                <li><a href="">OUR MENU</a></li>
+                <li><a href="OUR MENU.html">OUR MENU</a></li>
                 <li><a href="promo_lainya.html">PROMO</a></li>
                 <li><a href="event.html">EVENT</a></li>
-                <li><a href="">FOLLOW US</a></li>
+                <li><a href="#">FOLLOW US</a></li>
             </ul>
         </div>
         <div class="nav-icon">
