--- a/menu_burger.html
+++ b/menu_burger.html
@@ -155,8 +155,10 @@
             bertabur wijen.
           </p>
           <p class="pop-price">Rp. 45.500</p>
-          <a href="">
-            <button class="btn-pop"><i class="fa-solid fa-cart-shopping"></i>Pesan Sekarang</button>
+          <a href="cart.html">
+            <button class="btn-pop">
+              <i class="fa-solid fa-cart-shopping"></i>Pesan Sekarang
+            </button>
           </a>
         </div>
       </div>
